; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvmem/extr_core.c___nvmem_device_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvmem/extr_core.c___nvmem_device_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmem_device = type { i32, i32, i32 }

@nvmem_device_release = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvmem_device*)* @__nvmem_device_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__nvmem_device_put(%struct.nvmem_device* %0) #0 {
  %2 = alloca %struct.nvmem_device*, align 8
  store %struct.nvmem_device* %0, %struct.nvmem_device** %2, align 8
  %3 = load %struct.nvmem_device*, %struct.nvmem_device** %2, align 8
  %4 = getelementptr inbounds %struct.nvmem_device, %struct.nvmem_device* %3, i32 0, i32 2
  %5 = call i32 @put_device(i32* %4)
  %6 = load %struct.nvmem_device*, %struct.nvmem_device** %2, align 8
  %7 = getelementptr inbounds %struct.nvmem_device, %struct.nvmem_device* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @module_put(i32 %8)
  %10 = load %struct.nvmem_device*, %struct.nvmem_device** %2, align 8
  %11 = getelementptr inbounds %struct.nvmem_device, %struct.nvmem_device* %10, i32 0, i32 0
  %12 = load i32, i32* @nvmem_device_release, align 4
  %13 = call i32 @kref_put(i32* %11, i32 %12)
  ret void
}

declare dso_local i32 @put_device(i32*) #1

declare dso_local i32 @module_put(i32) #1

declare dso_local i32 @kref_put(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
